crates/nargo_cli/tests/compile_tests_data/pass/empty_tuple.nr
fn test() {
    ()
}

fn test2() -> () {
    ()
}

fn test3() -> () {}
