crates/nargo_cli/tests/compile_tests_data/fail/unexpected-return-on-unit.nr
fn foo() -> usize {
    3
}

fn bar() {
    foo()
}
